syntax = "proto3";

package api.userWalletAsset.v1;

option go_package = "block-crawling/api/user_wallet_asset/v1;v1";

// 用户钱包资产接口
service UserWalletAsset {

  // 获取用户全部钱包资产总值
  rpc UserWalletAssetTotal (UserWalletAssetTotalReq) returns (UserWalletAssetTotalResp) {}

  // 获取用户全部钱包资产总值历史
  rpc UserWalletAssetHistory (UserWalletAssetHistoryReq) returns (UserWalletAssetHistoryResp) {}

  // 获取用户全部钱包收益历史
  rpc UserWalletIncomeHistory (UserWalletIncomeHistoryReq) returns (UserWalletIncomeHistoryResp) {}

  // 获取用户全部有资产的钱包uid
  rpc UserWallet (UserWalletReq) returns (UserWalletResp) {}

  // 获取用户全部有资产的链
  rpc UserChain (UserChainReq) returns (UserChainResp) {}

  // 批量获取用户链资产汇总
  rpc UserChainAmount (UserChainAmountReq) returns (UserChainAmountResp) {}

  // 获取用户全部有资产的Token
  rpc UserToken (UserTokenReq) returns (UserTokenResp) {}

  // 获取用户全部资产列表
  rpc UserAssetList (UserAssetListReq) returns (UserAssetListResp) {}

  // 用户资产分布饼状图
  rpc UserAssetDistribution (UserAssetDistributionReq) returns (UserAssetDistributionResp) {}

  // 用户单链资产分布饼状图
  rpc UserChainAssetDistribution (UserChainAssetDistributionReq) returns (UserChainAssetDistributionResp) {}

  // 用户网络分布饼状图
  rpc UserChainDistribution (UserChainDistributionReq) returns (UserChainDistributionResp) {}

  // 用户钱包分布饼状图
  rpc UserWalletDistribution (UserWalletDistributionReq) returns (UserWalletDistributionResp) {}

  // 用户单链资产分析
  rpc UserChainAssetFilter (UserChainAssetFilterReq) returns (UserChainAssetFilterResp) {}

  // 获取 DeFi 平台接口
  rpc UserWalletDeFiPlatforms(UserWalletDeFiPlatformRequest) returns (UserWalletDeFiPlatformResp) {}

  // 获取 DeFi 资产列表接口
  rpc UserWalletDeFiAssets(UserWalletDeFiAssetRequest) returns (UserWalletDeFiAssetResp) {}

  // 获取 DeFi 平台分布
  rpc UserWalletDeFiDistribution(UserWalletRequest) returns (UserWalletDeFiDistributionResp) {}

  // 获取资产类型分布
  rpc UserWalletAssetTypeDistribution(UserWalletRequest) returns (UserWalletAssetTypeDistributionResp) {}
}

message Currency{
  //人民币
  string cny = 1;
  //美元
  string usd = 2;
  //USDT
  string usdt = 3;
  //BTC
  string btc = 4;
}

message UserWalletAssetTotalReq{
  //钱包id
  repeated string uids = 1;

  //平台 web android ios
  string platform = 2;
}

message UserWalletAssetTotalResp{
  //换算人民币总资产
  UserWalletAssetTotal cny = 1;
  //换算美元总资产
  UserWalletAssetTotal usd = 2;
  //换算USDT总资产
  UserWalletAssetTotal usdt = 3;
  //换算BTC总资产
  UserWalletAssetTotal btc = 4;
  //收益百分比
  string incomePercentage = 5;

  message UserWalletAssetTotal{
    //总资产
    string amount = 1;
    //收益
    string income = 2;
  }
}

message UserWalletAssetHistoryReq{
  // 钱包id
  repeated string uids = 1;
  // 时间范围，7d,30d,90d,180d
  string range = 2;
  //平台 web android ios
  string platform = 3;
	// 是否为 DeFi 资产
	bool isDefi = 4; // false: 非 DeFi 资产，true： DeFi 资产
}

message UserWalletAssetHistoryResp{
  //总资产
  Currency amount = 1;
  //今日收益 废弃字段
  Currency income = 2;
  //今日收益率 废弃字段
  string percentage = 3;
  //图表数据
  repeated UserWalletAssetHistory histories = 4;

  message UserWalletAssetHistory{
    //时间
    int64 time = 1;
    //人民币金额
    string cnyAmount = 2;
    //美元金额
    string usdAmount = 3;
    //USDT金额
    string usdtAmount = 4;
    //BTC金额
    string btcAmount = 5;

		// 筛选范围内，从第一天到现在的变化金额
		Currency changeAmount = 6;
		// 筛选范围内，从第一天到现在的变化率
		string changePercentage = 7;
  }
	// 筛选范围内，第一天到最后一天的变化金额
  Currency changeAmount = 5;
	// 筛选范围内，第一天到最后一天的变化率
	string changePercentage = 6;
}

message UserWalletIncomeHistoryReq{
  // 钱包id
  repeated string uids = 1;
  // 时间范围，7d,30d,90d,180d
  string range = 2;
  //平台 web android ios
  string platform = 3;

	// 是否为 DeFi 资产
	bool isDefi = 4; // false: 非 DeFi 资产，true： DeFi 资产
}

message UserWalletIncomeHistoryResp{
  //总收益
  Currency amount = 1;
  //总收益百分比 废弃字段
  string percentage = 2;
  //图表数据
  repeated UserWalletIncomeHistory histories = 3;

  message UserWalletIncomeHistory{
    //时间
    int64 time = 1;
    //资产
    string cnyAmount = 2;
    string usdAmount = 3;
    string usdtAmount = 4;
    string btcAmount = 5;
  }
  Currency changeAmount = 4;
  string changePercentage = 5;
}

message UserWalletReq{
  // 钱包id
  repeated string uids = 1;
}

message UserWalletResp{
  // 钱包id
  repeated UserWallet userWalletList = 1;

  message UserWallet{
    string uid = 1;
    Currency amount = 2;
  }


}

message UserChainReq{
  // 钱包id
  repeated string uids = 1;
}

message UserChainResp{
  // 用户的链
  repeated UserChain chains = 1;

  message UserChain{
    //链名称
    string chainName = 1;
    //链Logo
    string chainLogo = 2;
  }
}

message UserChainAmountReq{
  // 钱包 id
  repeated string uids = 1;
  // chainName 列表
  repeated string chainNames = 2;
}

message UserChainAmountResp{
  repeated UserChainAmount userChainAmountList = 1;

  message UserChainAmount{
    string chainName = 1;
    string chainLogo = 2;
    Currency amount = 3;
  }
}

message UserTokenReq{
  // 钱包id
  repeated string uids = 1;
  // chain name
  repeated string chainNames = 2;
}

message UserTokenResp{
  // 钱包id
  repeated UserToken tokens = 1;

  message UserToken{
    //链名称
    string chainName = 1;
    //链 logo
    string chainLogo = 2;
    //代币地址
    string tokenAddress = 3;
    //代币名称
    string tokenSymbol = 4;
    //代币 logo
    string tokenLogo = 5;
  }
}

message UserAssetListReq{
  //页码
  int64 pageSize = 1;
  //每页数量
  int64 pageNumber = 2;
  //钱包 id
  repeated string uids = 3;
  //链名
  repeated string chainNames = 4;
  //token address，需要穿入chainname，例如：ETH_0XAB12
  repeated string tokenAddresses = 5;
  //排序，asc 或 desc
  string order = 6;
  //钱包地址
  repeated string addresses = 7;
  //填充不存在的资产。如果未查到某 token 资产，则填充改资产的基本信息
  bool fillNotExitAsset = 8;
  //是否展示测试链资产
  bool showTest = 9;
  //是否展示价值为 0 的资产
  bool showZeroValue = 10;
}

message UserAssetListResp{
  //总数据条数
  int64 total = 1;
  //总资产
  Currency totalAmount = 2;
  //资产列表
  repeated UserAsset userAssetList = 3;

  message UserAsset{
    //代币地址
    string tokenAddress = 1;
    //代币symbol
    string tokenSymbol = 3;
    //代币 logo
    string tokenLogo = 4;
    //链名
    string chainName = 5;
    //钱包 id
    string uid = 6;
    //数量
    string amount = 7;
    //价值
    Currency currencyAmount = 8;
    //价格
    Currency price = 9;
    //价格 24 小时变化
    string priceDelta24h = 13;
    //成本价
    Currency costPrice = 10;
    //收益
    Currency income = 11;
    //收益百分比
    string incomePercentage = 12;
  }

}

message UserAssetDistributionReq{
  // 钱包id
  repeated string uids = 1;
}

message UserAssetDistributionResp{
  //用户资产列表
  repeated UserAsset userAssetList = 1;

  message UserAsset{
    //代币名称
    string tokenSymbol = 1;
    //数量
    string amount = 2;
    //换算价值
    Currency currencyAmount = 3;
    //百分比
    string percentage = 4;

  }

}

message UserChainAssetDistributionReq{
  //链名
  string chainName = 1;
  // 钱包id
  repeated string uids = 2;
}

message UserChainAssetDistributionResp{
  //用户资产列表
  repeated UserAsset userAssetList = 1;

  message UserAsset{
    //代币名称
    string tokenSymbol = 1;
    //数量
    string amount = 2;
    //换算价值
    Currency currencyAmount = 3;
    //百分比
    string percentage = 4;
  }
}

message UserChainDistributionReq{
  // 钱包id
  repeated string uids = 1;
}

message UserChainDistributionResp{
  //链列表
  repeated UserChain userChainList = 1;

  message UserChain{
    //链名
    string chainName = 1;
    //换算金额
    Currency currencyAmount = 2;
    //百分比
    string percentage = 3;
  }

}

message UserWalletDistributionReq{
  // 钱包id
  repeated string uids = 1;
}

message UserWalletDistributionResp{
  //钱包列表
  repeated UserWallet userWalletList = 1;

  message UserWallet{
    //钱包id
    string uid = 1;
    //换算价值
    Currency currencyAmount = 2;
    //百分比
    string percentage = 3;
  }

}

message UserChainAssetFilterReq{
  // 钱包id
  repeated string uids = 1;
}

message UserChainAssetFilterResp{
  //用户的链列表
  repeated UserChain userChainList = 1;

  message UserChain{
    //链名称
    string chainName = 1;
    //用户链资产列表
    repeated UserChainAsset userChainAssetList = 2;
  }

  message UserChainAsset{
    //钱包 id
    string uid = 1;
    //地址
    string address = 2;
  }

}


message UserWalletRequest {
  repeated string uids = 1;
}

message UserWalletDeFiPlatformRequest {
  repeated string uids = 1;
  string type = 2;  // staked,debt,lp,deposit

}

message UserWalletDeFiPlatformResp {
  repeated DeFiPlatform list = 1;
}

message DeFiPlatform {
  string id = 1;
  string origin = 2;
  string icon = 3;
  string dappName = 4;
  string type = 5;  // staked,debt,lp,deposit
}


message UserWalletDeFiAssetRequest {
  repeated string uids = 1;
  repeated string platformIds = 2; // empty for all
	repeated string chainNames = 3;
  string type = 4;  // staked,debt,lp,deposit
  int32 pageNum = 5;
  int32 pageSize = 6;

	string orderBy = 7; // Current value: "value", Profit: "profit"
	string order = 8; // "asc" or "desc"
}

message UserWalletDeFiAssetResp {
  int64 total = 1;
  repeated UserWalletDeFiAsset list = 2;

  //总资产
  Currency totalAmount = 3;

  message UserWalletDeFiAsset {
    oneof value {
      UserWalletDeFiAssetStaked staked = 1;
      UserWalletDeFiAssetDebt debt = 2;
      UserWalletDeFiAssetLP lp = 3;
      UserWalletDeFiDeposit deposit = 4;
    }

    message UserWalletDeFiAssetStaked {
      // 资产名称
      UserWalletAssetToken token = 1;
      // 抵押数量
      string stakedAmount = 2;
      // 抵押平台
      DeFiPlatform platform = 3;
      // 抵押时间
      int32 stakedAt = 4;
      // 预计收益
      Currency profit = 5;
			// 当前价值
			Currency value = 6;
			// 钱包 ID
			string uid = 7;
			string profitRate = 8;
			string chainName = 9;
    }
    message UserWalletDeFiAssetDebt {
      // 借入资产
      UserWalletAssetToken token = 1;
      // 借入数量
      string borrowAmount = 2;
      // 借入平台
      DeFiPlatform platform = 3;
      // 借入时间
      int32 borrowedAt = 4;
      // 需还款额度
      string repayAmount = 5;
			// 当前价值
			Currency value = 6;
			// 钱包 ID
			string uid = 7;
			string chainName = 8;
    }
    message UserWalletDeFiAssetLP {
      // 流动性代币 a
      UserWalletAssetToken tokenA = 1;
      // 流动性代币 b
      UserWalletAssetToken tokenB = 2;

      // 流动性池
      UserWalletAssetToken lpToken = 3;

      // 平台
      DeFiPlatform platform = 4;
      // 添加时间
      int32 createdAt = 5;
      // 收益
      Currency profit = 6;
			// 当前价值
			Currency value = 7;
			// 钱包 ID
			string uid = 8;

			string amountA = 9;
			string amountB = 10;
			string profitRate = 11;
			string chainName = 12;
    }
    message UserWalletDeFiDeposit {
      // 存入资产
      UserWalletAssetToken token = 1;
      // 存入数量
      string depositAmount = 2;
      // 存入平台
      DeFiPlatform platform = 3;
      // 存入时间
      int32 depositedAt = 4;
      // 收益
      Currency profit = 5;
			// 当前价值
			Currency value = 6;
			// 钱包 ID
			string uid = 7;
			string profitRate = 8;
			string chainName = 9;
    }
  }
}

message UserWalletAssetToken {
  //代币地址
  string tokenAddress = 1;
  //代币symbol
  string tokenSymbol = 3;
  //代币 logo
  string tokenLogo = 4;
}


message UserWalletDeFiDistributionResp {
  repeated UserWalletDeFiDistribution list = 1;

  message UserWalletDeFiDistribution {
    // 占比
    string percentage = 1;

    // 金额
    Currency amount = 2;

    // 平台
    DeFiPlatform platform = 3;
  }
}

message UserWalletAssetTypeDistributionResp {
  repeated UserWalletAssetTypeDistribution list = 1;

  message UserWalletAssetTypeDistribution {
    // 占比
    string percentage = 1;

    // 金额
    Currency amount = 2;

    // 资产类型
    string assetType = 3; // staked,debt,lp,deposit
  }
}
